@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1560: Last batch is not filled correctly in MultithreadedBatchItemSimilarities (Jarosław Bojar)
+
   MAHOUT-1554: Provide more comprehensive classification statistics (Karol Grzegorczyk via ssc)
 
   MAHOUT-1548: Fix broken links in quickstart webpage (Andrew Palumbo via ssc)
